@@ -3,9 +3,9 @@
 //
 /**
  * \file main_controller.c
- * \brief Fonction principale du controller.
+ * \brief Fichier principal du controller.
  *
- * Fonction principale pour la gestion du controller du projet
+ * Fichier principal pour la gestion du controller du projet
  */
 #include "main_controller.h"
 
@@ -45,9 +45,11 @@ void controller(View_elements *app,Playground * pg){
                             }
                             else if (SDL_PointInRect(&point,&app->CCarte[0])){
                                 controller_battlefield(app,pg,Archipelago);
+                                show_menu(app);
                             }
                             else if (SDL_PointInRect(&point,&app->CCarte[1])){
                                 controller_battlefield(app,pg,Antartica);
+                                show_menu(app);
                             }
                             break;
                         case Rules:
@@ -72,5 +74,23 @@ void controller(View_elements *app,Playground * pg){
 }
 
 void controller_battlefield(View_elements * app,Playground * pg,enum Carte choix){
+    SDL_Event event;
+    SDL_Point point= {-1,-1};
+    init_view_battlefield(app,choix);
     show_battlefield(app);
+    int run=1;
+    while (run==1){
+        SDL_WaitEvent(&event);
+        switch(event.type){
+            case SDL_QUIT:
+                run =0;
+                break;
+            case SDL_MOUSEBUTTONDOWN:
+                if ((event.button.button==SDL_BUTTON_LEFT) && (event.button.windowID== SDL_GetWindowID(app->wwindow))) {
+                    point.x = event.button.x;
+                    point.y = event.button.y;
+                    run=0;
+                }
+        }
+    }
 }
