@@ -1,10 +1,15 @@
 //
 // Created by robin on 07/02/2022.
 //
-
+/**
+ * \file main.c
+ * \brief Fichier principal du projet.
+ *
+ * Fichier principal qui appelle les différentes fonctions pour initialiser le modèle et la vue puis donne la main au controleur.
+ */
 #include "controller/main_controller.h"
 
-int main (int argc, char *argv[]){
+int main (){
     View_elements app;
     Playground pg;
     if((init_view(&app)&& init_model(&pg)) !=EXIT_SUCCESS){
