@@ -1,6 +1,12 @@
 //
 // Created by robin on 07/02/2022.
 //
+/**
+ * \file main_model.c
+ * \brief Fichier principal du model.
+ *
+ * Fichier principal pour la gestion du model du projet
+ */
 
 #include "main_model.h"
 
