@@ -3,9 +3,9 @@
 //
 /**
  * \file main_model.h
- * \brief Fonction principale du model.
+ * \brief Fichier principal du model.
  *
- * Fonction principale pour la gestion du model du projet
+ * Fichier principal pour la gestion du model du projet
  */
 #ifndef PROJET_C_MAIN_MODEL_H
 #define PROJET_C_MAIN_MODEL_H
