@@ -1,8 +1,17 @@
 //
 // Created by robin on 21/02/2022.
 //
+
+/**
+ * \file music.c
+ * \brief Fichier de gestion du son.
+ *
+ * Fichier qui gère la musique dans le jeu
+ */
+
 #include "main_view.h"
 
+//il faut remettre l'initialisation du module de la musique dans le controller.
 void start_music(){
     Mix_Music *music;
     music=Mix_LoadMUS("/home/robin/Projet_C/Ressources/music_sample.mp3");
